media/dagster/base/deployment.yaml
# dagster/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dagster
  labels:
    app: dagster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dagster
  template:
    metadata:
      labels:
        app: dagster
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
        prometheus.io/path: "/metrics"
    spec:
      serviceAccountName: dagster  # Correctly placed at the pod spec level
      imagePullSecrets:
      - name: gitlab-registry
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: dagster-dagit
        image: 192.168.50.2:5050/media/dagstributor:main
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: dagit-http
        command:
        - bash
        - -c
        - |
          mkdir -p $DAGSTER_HOME
          cp /etc/dagster-instance/dagster.yaml $DAGSTER_HOME/dagster.yaml
          dagster-webserver -h 0.0.0.0 -p 3000 -w /opt/dagster/app/dagstributor/workspace.yaml
        volumeMounts:
        - name: dagster-home
          mountPath: /opt/dagster/dagster_home
        - name: dagster-workspace
          mountPath: /opt/dagster/dagster_workspace
        - name: dagster-instance-config
          mountPath: /etc/dagster-instance
      - name: dagster-daemon
        image: 192.168.50.2:5050/media/dagstributor:main
        imagePullPolicy: Always
        command:
        - bash
        - -c
        - |
          mkdir -p $DAGSTER_HOME
          cp /etc/dagster-instance/dagster.yaml $DAGSTER_HOME/dagster.yaml
          dagster-daemon run -w /opt/dagster/app/dagstributor/workspace.yaml
        volumeMounts:
        - name: dagster-home
          mountPath: /opt/dagster/dagster_home
        - name: dagster-workspace
          mountPath: /opt/dagster/dagster_workspace
        - name: dagster-instance-config
          mountPath: /etc/dagster-instance
      volumes:
      - name: dagster-home
        hostPath:
          path: /d/k8s/volumes/dagster/ENV/home
          type: DirectoryOrCreate
      - name: dagster-workspace
        hostPath:
          path: /d/k8s/volumes/dagster/ENV/workspace
          type: DirectoryOrCreate
      - name: dagster-instance-config
        configMap:
          name: dagster-instance
