media/dagster/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dagster-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: dagster.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dagster
                port:
                  number: 3000
